<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            app:tint="@color/purple_200"
            android:contentDescription="@string/back_btn"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/world_of_music"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <ImageButton
            android:id="@+id/favourteBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favourte_empty_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="15dp"
            app:tint="#E80B0B"
            android:contentDescription="@string/favourites_btn"/>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImaPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/splash_screen"
        app:shapeAppearanceOverlay="@style/cruver"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="5dp"/>
    <TextView
        android:id="@+id/sondnamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton

            android:id="@+id/priousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/back_icon"
            app:iconSize="40dp"
            />
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playpauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            android:layout_marginHorizontal="10dp"
            app:shapeAppearanceOverlay="@style/cruver"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSeekbarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/Start"
            android:gravity="center"/>

      <androidx.appcompat.widget.AppCompatSeekBar
          android:id="@+id/seekBarPA"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          tools:ignore="InefficientWeight,NestedWeights"
          android:layout_gravity="center"

          />
        <TextView
            android:id="@+id/tvSeekbarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/loding"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repectbtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repect_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            app:tint="#E80B0B"
            android:contentDescription="@string/repete"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            app:tint="#E80B0B"
            android:contentDescription="@string/share"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            app:tint="#E80B0B"
            android:contentDescription="@string/timer"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/eqlizerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equalazer_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            app:tint="#E80B0B"
            android:contentDescription="@string/eqlizaer"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>